--- a/.gitignore
+++ b/.gitignore
@@ -242,6 +242,8 @@ classes/build-classes-Desktop_Qt_5_9_0_MSVC2015_64bit-Debug/
 # In repository we don't need to have:
 # Compiled object files
 *.o
+*.fycmPe
+*.xmnOLX
 
 # Generated MOC, resource and UI files
 moc_*.cpp
