--- a/.gitignore
+++ b/.gitignore
@@ -243,6 +243,7 @@ classes/build-classes-Desktop_Qt_5_9_0_MSVC2015_64bit-Debug/
 # Compiled object files
 *.o
 *.ui.*
+__pycache__/
 
 # Generated MOC, resource and UI files
 moc_*.cpp
